# sitecustomize-entrypoints

./: .gitignore  .readthedocs.yaml  README.md  license.md  pyproject.toml
.github/workflows/: linting.yaml  testing.yaml
docs/: changes.md  changes.rst  conf.py  contributing.md  contributors.md  index.rst  license.md  readme.md
src/sitecustomize/: __init__.py  _utils.py
src/sitecustomize/_vendor/: vendor.txt
src/sitecustomize/_vendor/importlib_metadata/: __init__.py
tests/: conftest.py  test_sitecustomize.py  test_utils.py
