
[tool.flake8]
max_line_length = 88


[tool.poetry]
name = "sitecustomize-entrypoints"
version = "0.1.0"
description = ""
authors = ["Dos Moonen <d.moonen@nki.nl>"]
readme = "README.md"
homepage = "https://github.com/Darsstar/sitecustomize-entrypoints"
repository = "https://github.com/Darsstar/sitecustomize-entrypoints"
packages = [{ include = "sitecustomize", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.7.2"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
black = ">=23.1.0"
flake8-bugbear = ">=23.2.13"
flake8-pyproject = ">=1.2.2"
mypy = ">=1.1.1"


[tool.pytest.ini_options]
addopts = "--junit-xml='var/coverage/pytest.xml'"
cache_dir = "var/cache/pytest"
testpaths = ["tests"]


[tool.vendoring]
destination = "src/sitecustomize/_vendor/"
requirements = "src/sitecustomize/_vendor/vendor.txt"
namespace = "sitecustomize._vendor"

protected-files = ["__init__.py", "README.rst", "vendor.txt"]

[tool.vendoring.transformations]
drop = [
  # contains unnecessary scripts
  "bin/",
]

[tool.vendoring.typing-stubs]
six = []
distro = []

[tool.vendoring.license.directories]

[tool.vendoring.license.fallback-urls]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/*/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
